added python test project

--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@
 
                 <!-- Project Card 3 -->
                 <div class="bg-accent2 border border-primary p-6 h-[350px] w-[350px] rounded flex flex-col">
-                    <h3 class="text-2xl font-semibold text-primary">Joshua Ryan Dietz's Portfolio</h3>
-                    <p class="mt-4 flex-grow">Portfolio website for a filmmaker in Los Angeles.</p>
+                    <h3 class="text-2xl font-semibold text-primary">Python Data Visualization</h3>
+                    <p class="mt-4 flex-grow">Utilizies Python and libraries to visualize data.</p>
                     <div class="mt-4 flex flex-wrap justify-center gap-2 bg-primary text-accent1 rounded-md p-3">
-                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">HTML</span>
-                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">CSS</span>
-                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">JavaScript</span>
+                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">Python</span>
+                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">Pandas</span>
+                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">Plotly</span>
+                        <span class="bg-accent2 text-primary px-4 py-1 rounded-md font-bold hover:text-secondary">Jupyter</span>
                     </div>
                     <div class="flex justify-center mt-4">
-                        <a href="https://github.com/chadrosser/dietz" target="_blank" class="text-primary font-bold hover:text-secondary">GitHub Repo</a>
+                        <a href="https://github.com/chadrosser/python_tests" target="_blank" class="text-primary font-bold hover:text-secondary">GitHub Repo</a>
                     </div>
                 </div>
 
